--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:cypress/recommended"
     ],
     "rules": {
       "react-hooks/exhaustive-deps": "off"
@@ -58,6 +59,7 @@
   },
   "devDependencies": {
     "@types/uuid": "^9.0.0",
-    "cypress": "^12.10.0"
+    "cypress": "^12.10.0",
+    "eslint-plugin-cypress": "^2.15.1"
   }
 }
